# SRDFAF

./: .gitignore  pyproject.toml  run.py
.github/: copilot-instructions.md
configs/: 4080.yaml  default.yaml  pro6000.yaml
scripts/: eval_server_sft.py  pack_for_server.sh
srdf_af/: __init__.py  config.py  data.py  evaluate.py  flywheel.py  generate.py  judge.py  preference.py  render.py  rewards.py  train.py
